<resources>
    <string name="app_name">SMS Relay</string>
    <string name="app_url">https://github.com/advarisk/smsrelay</string>
    <string name="app_license">GPLv3</string>

    <string name="pref_header_settings">Settings</string>
    <string name="pref_group_httpauth">HTTP Basic Authentication</string>
    <string name="pref_title_is_enabled">Enabled?</string>
    <string name="pref_title_device_name">Username</string>
    <string name="pref_title_device_key">Password</string>
    <string name="pref_group_server">Server</string>
    <string name="pref_title_url">Relay to URL</string>
    <string name="pref_title_httpmethod">HTTP Method</string>
    <string name="pref_group_filter">Filter Messages</string>
    <string name="pref_title_sender">By Sender</string>
    <string name="pref_title_content">By Content</string>

    <string name="pref_header_about">About</string>
    <string name="pref_about_name">Name</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_about_website">Website</string>
    <string name="pref_about_license">License</string>

    <string-array name="http_methods">
        <item>PUT</item>
        <item>POST</item>
    </string-array>
</resources>
