<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="is_enabled"
        android:title="@string/pref_title_is_enabled" />

    <EditTextPreference
        android:key="device_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_device_name"
        android:dependency="is_enabled" />

    <EditTextPreference
        android:key="device_secret_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:password="true"
        android:title="@string/pref_title_device_key"
        android:dependency="is_enabled" />

</PreferenceScreen>
